--- a/kustomize-guestbook/overlays/dev/kustomization.yaml
+++ b/kustomize-guestbook/overlays/dev/kustomization.yaml
@@ -7,7 +7,7 @@ namePrefix: kustomize
 
 commonLabels:
   environment: dev
-  app: guestbook
+  app: guestbook-kustomize-dev
 
 bases:
   - ../../base
