--- a/kustomize-guestbook/overlays/dev/kustomization.yaml
+++ b/kustomize-guestbook/overlays/dev/kustomization.yaml
@@ -1,5 +1,22 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: dev
+
+namePrefix: dev-
+
+commonLabels:
+  environment: dev
+  app: guestbook
+
 resources:
   - ../../base
+
+replicas:
+  - name: guestbook-ui
+    count: 2
+
+configMapGenerator:
+  - name: guestbook-config
+    literals:
+      - ENVIRONMENT=development
